--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'noscript/tmux-mighty-scroll'
 set -g @plugin 'alexwforsythe/tmux-which-key'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'nordtheme/tmux'
 
 # Binds
