--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,12 @@ set -g @plugin 'nordtheme/tmux'
 unbind C-b
 set-option -g prefix C-Space
 
+unbind %
+bind = split-window -h
+
+unbind '"'
+bind - split-window -v
+
 # Settings/Preferences
 set -ga terminal-overrides ",xterm-256color:Tc"
 set -g base-index 1
