--- a/.config/sway/config
+++ b/.config/sway/config
@@ -173,7 +173,8 @@ bindsym $mod+r mode "resize"
     bindsym --locked XF86MonBrightnessDown exec brightnessctl set 5%-
     bindsym --locked XF86MonBrightnessUp exec brightnessctl set 5%+
     # Special key to take a screenshot with grim
-    bindsym Print exec grim
+    bindsym $mod+P exec grim
+    bindsym $mod+Shift+P exec grim -g "$(slurp)"
 
 #
 # Status Bar:
