--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,7 +20,7 @@ bind - split-window -v
 
 # Settings/Preferences
 set -ga terminal-overrides ",xterm-256color:Tc"
-set -g @tmux-which-key-disable-autobuild=1
+set -g @tmux-which-key-disable-autobuild 1
 set -g base-index 1
 setw -g pane-base-index 1
 
